syntax = "proto3";

package TestMessages;

option java_package = "io.github.ppissias.xsrpcj.example.performance";
option java_outer_classname = "TestMessages";
option java_generic_services = true;

//sample message request
message MessageRequest {
  string requestData = 1;
  int32 numberOfCallbacks = 2;
}

//sample message response
message MessageResponse {
 enum responseEnum {
    ACCEPTED = 0;
    REJECTED = 1;
  }
  
  responseEnum response = 1; 
}

//sample message callback
message CallbackResponse {
	repeated string callbackText = 1;
}

